--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             class="tw-sticky tw-top-0 tw-z-20 tw-flex tw-h-[60px] tw-w-full tw-bg-white tw-px-[10%] tw-shadow-lg max-md:tw-mr-auto max-md:tw-bg-primary md:tw-justify-around"
         >
             <div class="tw-flex tw-w-fit">
-                <div class="tw-w-[50px] tw-p-1">
+                <div class="tw-w-[50px]">
                     <img
                         src="./assets/logo.png"
                         alt="supreme-car-wash logo"
@@ -177,7 +177,7 @@
                             alt="Car wash"
                             class="tw-h-full tw-w-full tw-object-cover"
                         />
-                        <div class="text">Interior car wash</div>
+                        <div class="text">Best TrackRide</div>
                     </div>
 
                     <div class="slides fade">
@@ -187,7 +187,7 @@
                             alt="supreme car wash"
                             class="tw-h-full tw-w-full tw-object-cover"
                         />
-                        <div class="text">Best car wash</div>
+                        <div class="text">Best SmartMatch</div>
                     </div>
 
                     <!-- Next and previous buttons -->
@@ -258,7 +258,7 @@
             <h2
                 class="tw-text-center tw-text-5xl tw-text-primary max-md:tw-text-3xl"
             >
-                Premium washing service
+            Carpooling Services
             </h2>
 
             <div
@@ -464,7 +464,7 @@
                     <h2
                         class="primary-text-color tw-text-5xl tw-font-medium max-md:tw-text-3xl"
                     >
-                        Request car wash
+                        Request Carpooling
                     </h2>
                 </div>
                 <form
@@ -567,8 +567,7 @@
                         <!-- testimonials -->
                         <div class="slides fade tw-text-justify tw-text-lg">
                             <q class="tw-italic tw-text-gray-600">
-                                CoMove a complètement transformé ma façon de me rendre au travail. Avant, je passais des heures coincé dans le traffic de Casablanca, dépensant beaucoup d'argent en carburant et en frais de transport. Maintenant, je partage mon trajet quotidien avec des collègues, ce qui me permet de réduire mes coûts de moitié et de contribuer à la réduction des émissions de CO2. L'application est super intuitive - le système de géolocalisation et de matching est vraiment intelligent. En plus, j'ai fait de nouvelles connaissances professionnelles pendant mes trajets. CoMove n'est pas seulement un service de covoiturage, c'est une communauté qui change la mobilité à Casablanca !
-                            </q>
+                                CoMove transformed my daily commute. I save money, reduce my carbon footprint, and connect with colleagues. The app's intelligent matching system makes carpooling seamless and enjoyable!                            </q>
                             <div class="tw-mt-2 tw-text-yellow-400">
                                 <i class="bi bi-star-fill"></i>
                                 <i class="bi bi-star-fill"></i>
@@ -581,9 +580,7 @@
 
                         <div class="slides fade tw-text-justify tw-text-lg">
                             <q class="tw-italic tw-text-gray-600">
-                                Lorem ipsum dolor sit amet consectetur,
-                                adipisicing elit. Laudantium tempora
-                                reprehenderit illo accusamus minus sunt.
+                                Never thought carpooling could be this easy! CoMove's platform helps me split transportation costs, meet new people, and contribute to reducing traffic in Casablanca. Highly recommended!
                             </q>
                             <div class="tw-mt-2 tw-text-yellow-400">
                                 <i class="bi bi-star-fill"></i>
@@ -597,10 +594,7 @@
 
                         <div class="slides fade tw-text-justify tw-text-lg">
                             <q class="tw-italic tw-text-gray-600">
-                                Lorem ipsum dolor sit amet consectetur,
-                                adipisicing elit. Cupiditate quaerat quia aut
-                                eveniet ipsa quae consectetur placeat debitis
-                                doloribus animi.
+                                CoMove is a game-changer. Smart routing, cost savings, and a great community - this app has completely upgraded my travel experience. Sustainable mobility at its best!
                             </q>
                             <div class="tw-mt-2 tw-text-yellow-400">
                                 <i class="bi bi-star-fill"></i>
@@ -755,10 +749,10 @@
             <div class="tw-flex tw-h-full tw-w-[250px] tw-flex-col tw-gap-4">
                 <h2 class="tw-text-3xl max-md:tw-text-xl">Services</h2>
                 <div class="tw-flex tw-flex-col tw-gap-3 max-md:tw-text-sm">
-                    <a href="" class="footer-link">Car wash</a>
-                    <a href="" class="footer-link">Interior cleaning</a>
-                    <a href="" class="footer-link">Window wiping</a>
-                    <a href="" class="footer-link">Oil change</a>
+                    <a href="" class="footer-link">Ride Sharing</a>
+                    <a href="" class="footer-link">Route Planning</a>
+                    <a href="" class="footer-link">Safety Guidelines</a>
+                    <a href="" class="footer-link">Passenger Matching</a>
                 </div>
             </div>
             <div class="tw-flex tw-h-full tw-w-[250px] tw-flex-col tw-gap-4">
